--- a/ionic-basic/src/index.html
+++ b/ionic-basic/src/index.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxaJ4Lf0Wbnn1wOOlt_cGzBtFsk1eIrcc"
+      async
+    ></script>
   <app-root></app-root>
 </body>
 
