--- a/ionic-basic/src/index.html
+++ b/ionic-basic/src/index.html
@@ -20,7 +20,13 @@
 </head>
 
 <body>
+    <!--
+  <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly"
+      async
+    ></script>
+  -->
   <app-root></app-root>
-</body>
+</body> 
 
 </html>
