--- a/ionic-basic/src/index.html
+++ b/ionic-basic/src/index.html
@@ -20,11 +20,13 @@
 </head>
 
 <body>
-
-  <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAxaJ4Lf0Wbnn1wOOlt_cGzBtFsk1eIrcc"
+   
+  <!--
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly"
       async
     ></script>
+  -->
   <app-root></app-root>
 </body>
 
